styles/styles.css
html {
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
    background-color: #082129;
    color: #2f728d;
}

header {
    height: 150px;
    width: 100%;
    background-color: #082129;
    display: flex;
    justify-content: space-around;
}

header svg {
    width: 40px;
    height: 40px;
}

#leftHeader {
    display: flex;
    align-items: center;
    gap: 5px;
}

input {
    padding: 10px;
}

a {
    text-decoration: none;
    font-size: 3em;
    font-weight: bold;
    cursor: pointer;
    color: #2f728d;
}

a:hover {
    filter: saturate(2);
}

#rightHeader {
    display: flex;
    align-items: center;
    gap: 5px;
}

header p {
    font-size: 2em;
    padding: 1px;
}

body {
    margin: 0;
}

main {
    width: 100%;
    height: 70vh;
    background-color: #05171e;
    flex-wrap: wrap;
    display: flex;
    overflow-y: auto;
}

main img {
    width: 200px;
    height: 200px;
}

.d_none {
    display: none;
}

.showOnCentreOfThePage {
    display: flex;
    justify-content: center;
}

#loadingSection {
    background: #05171e;
    margin: 0;
    height: 30vh;
    width: 100%;
    position: sticky;
    top: 250px;

}

.pokeball {
    width: 80px;
    height: 80px;
    border-radius: 50%;
    background: linear-gradient(to bottom, #082129 50%, #082129 50%);
    border: 4px solid #4fa1c0;
    box-shadow: 0 0 0 4px #4fa1c0;
    position: relative;
    animation: shake 1.5s ease-in-out infinite;
}

.pokeball::before {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    width: 20px;
    height: 20px;
    background: #082129;
    border: 3px solid #4fa1c0;
    border-radius: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
    box-shadow: 0 0 0px #4fa1c0;
    animation: blink 1.5s ease-in-out infinite;
}

.pokeball::after {
    content: "";
    position: absolute;
    top: 49%;
    left: 0;
    width: 100%;
    height: 4px;
    background: #4fa1c0;
    z-index: 1;
}

@keyframes shake {
    0% {
        transform: rotate(0deg);
    }

    15% {
        transform: rotate(-15deg);
    }

    30% {
        transform: rotate(15deg);
    }

    45% {
        transform: rotate(-10deg);
    }

    60% {
        transform: rotate(10deg);
    }

    75% {
        transform: rotate(-5deg);
    }

    90% {
        transform: rotate(5deg);
    }

    100% {
        transform: rotate(0deg);
    }
}

@keyframes blink {

    0%,
    100% {
        box-shadow: 0 0 0px #4fa1c0;
    }

    15%,
    45%,
    75% {
        box-shadow: 0 0 12px 6px #4fa1c0;
    }

    30%,
    60%,
    90% {
        box-shadow: 0 0 6px 3px #4fa1c0;
    }
}

#pokemonSection {
    width: 100%;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin: 10px;
    gap: 10px;
}

.pokemonDiv {
    background-color: #4fa1c0;
    border-radius: 25px;
    color: white;
    text-align: center;
    width: 300px;
    height: 300px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 10px;
}

.pokemonDiv:hover {
    filter: brightness(120%);
    cursor: pointer;
}

.typeImgs {
    height: 30px;
    width: auto;
}

#loadButtonDiv {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    margin-bottom: 10px;
}

.loadButton {
    border-radius: 5px;
    cursor: pointer;
    background-color: #68a1b3;
    padding: 10px;
    font-weight: bold;
}

.loadButton:hover {
    background-color: gold;
}

footer {
    height: 150px;
    width: 100%;
    background-color: #082129;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 30px;
    font-size: 2em;
}

#pokedexInFooter {
    display: flex;
    flex-direction: row;
}

@media (max-width: 700px) {
    .pokemonDiv {
        width: 45%;
    }
}

@media (max-width: 550px) {
    #leftHeader {
        display: none;
    }

    .pokemonDiv {
        width: 70%;
    }

    #pokemonSection {
        flex-direction: column;
        align-items: center;
    }
}

/*Overlay Section*/

#overlay {
    position: fixed;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    background-color: rgba(0, 0, 0, 0.7);
    display: none;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    z-index: 10;
}

#overlay:hover {
    opacity: 1;
}

/*Arrow Section*/

.arrow-img {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    width: 48px;
    height: 48px;
    cursor: pointer;
    z-index: 10;
    transition: transform 0.2s;
}

.arrow-img:hover {
    transform: translateY(-50%) scale(1.1);
}

.arrow-img:first-of-type {
    left: 16px;
}

.arrow-img:last-of-type {
    right: 16px;
}

